feat: Enhance SEO and add FAQ section across multiple pages, update Firebase configuration tracking

--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,23 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Chi Siamo | LIQUIDO Premium Vape Store</title>
+    <title>Chi Siamo | Negozio Vape Premium a Monterotondo Roma | LIQUIDO</title>
+    <meta name="description" content="LIQUIDO: negozio vape premium a Monterotondo (Roma) dal 2018. Specializzati in liquidi vape e dispositivi vape di alta qualità. Servizi pulizia e manutenzione vape."/>
+    <meta name="keywords" content="negozio vape Monterotondo, vape shop Roma, chi siamo LIQUIDO, storia vape shop, negozio vape Lazio, vape shop Italia, servizi vape Monterotondo"/>
+    <meta name="author" content="LIQUIDO Vape Shop"/>
+    <meta name="robots" content="index, follow"/>
+    <link rel="canonical" href="https://liquido.vapeshop/public/about.html"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Chi Siamo | Negozio Vape Premium a Monterotondo Roma | LIQUIDO"/>
+    <meta property="og:description" content="LIQUIDO: negozio vape premium a Monterotondo (Roma) dal 2018. Specializzati in liquidi vape e dispositivi vape di alta qualità."/>
+    <meta property="og:url" content="https://liquido.vapeshop/public/about.html"/>
+    <meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+    <meta property="og:locale" content="it_IT"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Chi Siamo | LIQUIDO Vape Shop"/>
+    <meta name="twitter:description" content="Negozio vape premium a Monterotondo (Roma) dal 2018. Specializzati in liquidi vape e dispositivi vape di alta qualità."/>
+    <meta name="geo.region" content="IT-LA"/>
+    <meta name="geo.placename" content="Monterotondo"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&amp;display=swap"
@@ -83,6 +99,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
