--- a/public/brands.html
+++ b/public/brands.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Marchi Partner | LIQUIDO Premium Vape Shop</title>
+    <title>Marchi Partner Vape Premium | LIQUIDO Vape Shop</title>
+    <meta name="description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok e altri. Marchi vape di alta qualità a Monterotondo, Roma."/>
+    <meta name="keywords" content="marchi vape, marchi vape premium, GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok, brand vape, vape shop marchi, marchi vape Italia"/>
+    <meta name="author" content="LIQUIDO Vape Shop"/>
+    <meta name="robots" content="index, follow"/>
+    <link rel="canonical" href="https://liquido.vapeshop/public/brands.html"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Marchi Partner Vape Premium | LIQUIDO Vape Shop"/>
+    <meta property="og:description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady e altri marchi di alta qualità."/>
+    <meta property="og:url" content="https://liquido.vapeshop/public/brands.html"/>
+    <meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+    <meta property="og:locale" content="it_IT"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Marchi Partner Vape Premium | LIQUIDO"/>
+    <meta name="twitter:description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO a Monterotondo, Roma."/>
+    <meta name="geo.region" content="IT-LA"/>
+    <meta name="geo.placename" content="Monterotondo"/>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap"
         rel="stylesheet" />
     <link
@@ -86,6 +102,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
