--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,25 @@
 <html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contatti &amp; Posizione | LIQUIDO</title>
+<title>Contatti &amp; Posizione | Vape Shop Monterotondo Roma | LIQUIDO</title>
+<meta name="description" content="Contatta LIQUIDO vape shop a Monterotondo (Roma). Indirizzo: via Adige 43C, 00015 Monterotondo. Telefono: +39 379 134 5367. Orari e informazioni negozio vape."/>
+<meta name="keywords" content="contatti vape shop, vape shop Monterotondo indirizzo, vape shop Roma, via Adige 43C, negozio vape Monterotondo, orari vape shop, telefono vape shop"/>
+<meta name="author" content="LIQUIDO Vape Shop"/>
+<meta name="robots" content="index, follow"/>
+<link rel="canonical" href="https://liquido.vapeshop/public/contact.html"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="Contatti &amp; Posizione | Vape Shop Monterotondo Roma | LIQUIDO"/>
+<meta property="og:description" content="Contatta LIQUIDO vape shop a Monterotondo (Roma). Indirizzo: via Adige 43C, 00015 Monterotondo. Telefono: +39 379 134 5367."/>
+<meta property="og:url" content="https://liquido.vapeshop/public/contact.html"/>
+<meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+<meta property="og:locale" content="it_IT"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Contatti | LIQUIDO Vape Shop Monterotondo"/>
+<meta name="twitter:description" content="Vape shop a Monterotondo (Roma). Via Adige 43C, 00015 Monterotondo. Telefono: +39 379 134 5367."/>
+<meta name="geo.region" content="IT-LA"/>
+<meta name="geo.placename" content="Monterotondo"/>
+<meta name="geo.position" content="42.0500;12.6167"/>
+<meta name="ICBM" content="42.0500, 12.6167"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -72,6 +90,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
@@ -89,47 +108,15 @@
 </div>
 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
 <div class="flex flex-col gap-10">
-<div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
 <div class="flex flex-col gap-4 rounded-xl border border-[#54543b] bg-[#27271b] p-6 hover:border-primary transition-colors">
 <span class="material-symbols-outlined text-primary text-3xl">call</span>
 <div>
                     <h3 class="text-white text-lg font-bold">WhatsApp</h3>
                     <p class="text-[#baba9c] text-sm">+39 379 134 5367</p>
+                    <a href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer" class="inline-block mt-3 bg-primary hover:bg-white text-background-dark px-6 py-2 rounded-sm font-black text-xs uppercase tracking-widest transition-all">
+                        Contattaci su WhatsApp
+                    </a>
 </div>
-</div>
-<div class="flex flex-col gap-4 rounded-xl border border-[#54543b] bg-[#27271b] p-6 hover:border-primary transition-colors">
-<span class="material-symbols-outlined text-primary text-3xl">mail</span>
-<div>
-                    <h3 class="text-white text-lg font-bold">Email</h3>
-                    <p class="text-[#baba9c] text-sm">info.vaporoom@gmail.com</p>
-</div>
-</div>
-</div>
-<div class="bg-[#27271b] border border-[#54543b] rounded-xl p-8">
-<h2 class="text-white text-2xl font-bold mb-6">Send us a message</h2>
-<form class="flex flex-col gap-5">
-<div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
-<div class="flex flex-col gap-2">
-<label class="text-sm font-semibold text-[#baba9c]">Full Name</label>
-<input class="bg-[#181811] border border-[#393928] rounded-lg p-3 text-white focus:outline-none focus:border-primary" placeholder="John Doe" type="text"/>
-</div>
-<div class="flex flex-col gap-2">
-<label class="text-sm font-semibold text-[#baba9c]">Email Address</label>
-<input class="bg-[#181811] border border-[#393928] rounded-lg p-3 text-white focus:outline-none focus:border-primary" placeholder="john@example.com" type="email"/>
-</div>
-</div>
-<div class="flex flex-col gap-2">
-<label class="text-sm font-semibold text-[#baba9c]">Subject</label>
-<input class="bg-[#181811] border border-[#393928] rounded-lg p-3 text-white focus:outline-none focus:border-primary" placeholder="Inquiry about custom blends" type="text"/>
-</div>
-<div class="flex flex-col gap-2">
-<label class="text-sm font-semibold text-[#baba9c]">Message</label>
-<textarea class="bg-[#181811] border border-[#393928] rounded-lg p-3 text-white focus:outline-none focus:border-primary" placeholder="How can we help you today?" rows="4"></textarea>
-</div>
-<button class="bg-primary text-[#181811] font-bold py-4 rounded-lg mt-2 hover:brightness-110 transition-all text-lg">
-                            Send Message
-                        </button>
-</form>
 </div>
 <div class="flex flex-col gap-4">
 <h2 class="text-white text-xl font-bold px-1">Opening Hours</h2>
@@ -234,11 +221,7 @@
 </div>
 <div class="flex items-center gap-3">
 <span class="material-symbols-outlined text-primary text-xl">call</span>
-                    <span class="text-[#baba9c] text-sm">+39 379 134 5367</span>
-</div>
-<div class="flex items-center gap-3">
-<span class="material-symbols-outlined text-primary text-xl">mail</span>
-                    <span class="text-[#baba9c] text-sm">info.vaporoom@gmail.com</span>
+                    <a href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer" class="text-[#baba9c] hover:text-primary text-sm transition-colors">+39 379 134 5367</a>
 </div>
 </div>
 </div>
