--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,24 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>LIQUIDO Vape Shop | Esperienza Vaping Premium</title>
+<meta name="description" content="LIQUIDO vape shop a Monterotondo (Roma): liquidi vape premium, dispositivi vape, servizi pulizia e manutenzione vape. Negozio specializzato in prodotti vaping di alta qualità in Italia."/>
+<meta name="keywords" content="liquidi vape, vape shop, dispositivi vape, vape shop Monterotondo, vape shop Roma, negozio vape, pulizia dispositivi vape, manutenzione vape, servizi vape, e-liquid Italia, vape Lazio"/>
+<meta name="author" content="LIQUIDO Vape Shop"/>
+<meta name="robots" content="index, follow"/>
+<link rel="canonical" href="https://liquido.vapeshop/public/index.html"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="LIQUIDO Vape Shop | Esperienza Vaping Premium"/>
+<meta property="og:description" content="LIQUIDO vape shop a Monterotondo (Roma): liquidi vape premium, dispositivi vape, servizi pulizia e manutenzione vape. Negozio specializzato in prodotti vaping di alta qualità in Italia."/>
+<meta property="og:url" content="https://liquido.vapeshop/public/index.html"/>
+<meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+<meta property="og:locale" content="it_IT"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="LIQUIDO Vape Shop | Esperienza Vaping Premium"/>
+<meta name="twitter:description" content="LIQUIDO vape shop a Monterotondo (Roma): liquidi vape premium, dispositivi vape, servizi pulizia e manutenzione vape."/>
+<meta name="geo.region" content="IT-LA"/>
+<meta name="geo.placename" content="Monterotondo"/>
+<meta name="geo.position" content="42.0500;12.6167"/>
+<meta name="ICBM" content="42.0500, 12.6167"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -107,6 +125,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
@@ -242,6 +261,66 @@
 </div>
 </div>
 </section>
+<section class="py-32 px-6 lg:px-20 bg-background-dark">
+<div class="max-w-[1440px] mx-auto">
+<div class="text-center mb-16">
+<h2 class="text-5xl lg:text-6xl text-bold-modern uppercase mb-4">Domande Frequenti</h2>
+<p class="text-slate-500 max-w-2xl mx-auto font-medium">Trova risposte rapide alle domande più comuni su liquidi vape, dispositivi vape e servizi a Monterotondo, Roma.</p>
+</div>
+<div class="max-w-4xl mx-auto space-y-4 mb-12">
+<div class="faq-item bg-[#27271b] border border-[#54543b] rounded-lg overflow-hidden">
+<div class="faq-question p-6 flex items-center justify-between cursor-pointer hover:text-primary transition-colors">
+<h3 class="text-lg font-bold">Quali sono i migliori liquidi vape disponibili a Monterotondo?</h3>
+<span class="material-symbols-outlined faq-icon text-primary">expand_more</span>
+</div>
+<div class="faq-answer">
+<div class="px-6 pb-6 text-[#baba9c] leading-relaxed">
+<p>Presso LIQUIDO vape shop a Monterotondo (Roma) troverai una selezione premium di liquidi vape delle migliori marche: Dinner Lady, Vaporesso, GeekVape, Voopoo e molti altri. Vieni a visitare il nostro negozio in via Adige 43C per scoprire la nostra gamma completa.</p>
+</div>
+</div>
+</div>
+<div class="faq-item bg-[#27271b] border border-[#54543b] rounded-lg overflow-hidden">
+<div class="faq-question p-6 flex items-center justify-between cursor-pointer hover:text-primary transition-colors">
+<h3 class="text-lg font-bold">Offrite servizi di pulizia e manutenzione vape a Monterotondo?</h3>
+<span class="material-symbols-outlined faq-icon text-primary">expand_more</span>
+</div>
+<div class="faq-answer">
+<div class="px-6 pb-6 text-[#baba9c] leading-relaxed">
+<p>Sì, presso il nostro vape shop a Monterotondo offriamo servizi completi di pulizia dispositivi vape e manutenzione vape. I nostri servizi includono: pulizia completa del dispositivo vape, pulizia del tank, cambio coil, sostituzione del cotone dell'atomizzatore. Prenota tramite WhatsApp al +39 379 134 5367.</p>
+</div>
+</div>
+</div>
+<div class="faq-item bg-[#27271b] border border-[#54543b] rounded-lg overflow-hidden">
+<div class="faq-question p-6 flex items-center justify-between cursor-pointer hover:text-primary transition-colors">
+<h3 class="text-lg font-bold">Dove si trova il vostro negozio vape a Monterotondo?</h3>
+<span class="material-symbols-outlined faq-icon text-primary">expand_more</span>
+</div>
+<div class="faq-answer">
+<div class="px-6 pb-6 text-[#baba9c] leading-relaxed">
+<p>Il nostro vape shop LIQUIDO si trova a Monterotondo (Roma) in via Adige 43C, CAP 00015. Siamo aperti dal lunedì al venerdì dalle 10:00 alle 21:00, sabato dalle 11:00 alle 22:00, e domenica dalle 12:00 alle 18:00.</p>
+</div>
+</div>
+</div>
+<div class="faq-item bg-[#27271b] border border-[#54543b] rounded-lg overflow-hidden">
+<div class="faq-question p-6 flex items-center justify-between cursor-pointer hover:text-primary transition-colors">
+<h3 class="text-lg font-bold">Come conservare correttamente i liquidi vape?</h3>
+<span class="material-symbols-outlined faq-icon text-primary">expand_more</span>
+</div>
+<div class="faq-answer">
+<div class="px-6 pb-6 text-[#baba9c] leading-relaxed">
+<p>Per conservare correttamente i liquidi vape, mantienili in un luogo fresco e asciutto, lontano dalla luce diretta del sole. La temperatura ideale è tra i 15°C e i 25°C. Conserva i liquidi vape in posizione verticale con il tappo ben chiuso per evitare l'ossidazione.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="text-center">
+<a href="faq.html" class="inline-flex items-center gap-2 bg-primary hover:bg-white text-background-dark px-10 py-5 rounded-sm font-black text-sm uppercase tracking-widest transition-all accent-glow">
+<span>Vedi tutte le FAQ</span>
+<span class="material-symbols-outlined">arrow_forward</span>
+</a>
+</div>
+</div>
+</section>
 <footer class="bg-charcoal border-t-2 border-primary pt-24 pb-12 px-6 lg:px-20">
 <div class="max-w-[1440px] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 lg:gap-20 mb-20">
 <div class="space-y-8">
@@ -362,6 +441,8 @@
         setInterval(nextSlide, 5000);
     </script>
     <script src="../src/js/modules/age-verification.js"></script>
+    <script src="../src/js/modules/faq-accordion.js"></script>
+    <script src="../src/js/services/seo-schema.js"></script>
     <!-- Firebase SDK (Legacy for Realtime Database) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
@@ -471,3 +552,5 @@
         })();
     </script>
 </body></html>
+
+
