--- a/public/myliquido.html
+++ b/public/myliquido.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>MyLiquido | LIQUIDO</title>
+    <title>MyLiquido | Servizi Premium Vape | LIQUIDO</title>
+    <meta name="description" content="MyLiquido: servizi premium per clienti vape. Richiedi prodotti speciali, prenota servizi di pulizia e manutenzione dispositivi vape a Monterotondo, Roma."/>
+    <meta name="keywords" content="MyLiquido, servizi vape, pulizia dispositivi vape, manutenzione vape, servizi premium vape, prenotazione vape, assistenza vape Monterotondo"/>
+    <meta name="author" content="LIQUIDO Vape Shop"/>
+    <meta name="robots" content="index, follow"/>
+    <link rel="canonical" href="https://liquido.vapeshop/public/myliquido.html"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="MyLiquido | Servizi Premium Vape | LIQUIDO"/>
+    <meta property="og:description" content="MyLiquido: servizi premium per clienti vape. Richiedi prodotti speciali, prenota servizi di pulizia e manutenzione dispositivi vape."/>
+    <meta property="og:url" content="https://liquido.vapeshop/public/myliquido.html"/>
+    <meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+    <meta property="og:locale" content="it_IT"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="MyLiquido | Servizi Premium Vape"/>
+    <meta name="twitter:description" content="Servizi premium per clienti vape: pulizia dispositivi, manutenzione, prodotti speciali a Monterotondo, Roma."/>
+    <meta name="geo.region" content="IT-LA"/>
+    <meta name="geo.placename" content="Monterotondo"/>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
@@ -92,8 +108,9 @@
                     <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
                     <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="myliquido.html">MyLiquido</a>
                     <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
-                    <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
-                </nav>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
+</nav>
             </div>
             <div class="flex items-center gap-6">
                 <button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
