--- a/public/products.html
+++ b/public/products.html
@@ -2,7 +2,23 @@
 <html class="dark" lang="it"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>LIQUIDO | Catalogo Prodotti</title>
+<title>Catalogo Prodotti Vape | Liquidi e Dispositivi | LIQUIDO</title>
+<meta name="description" content="Catalogo completo di liquidi vape e dispositivi vape premium. Scopri la nostra selezione di e-liquid e mod vape a Monterotondo, Roma. Qualità garantita."/>
+<meta name="keywords" content="liquidi vape, dispositivi vape, e-liquid, mod vape, pod vape, catalogo vape, vape shop, prodotti vape, liquidi vape Roma, dispositivi vape Monterotondo"/>
+<meta name="author" content="LIQUIDO Vape Shop"/>
+<meta name="robots" content="index, follow"/>
+<link rel="canonical" href="https://liquido.vapeshop/public/products.html"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="Catalogo Prodotti Vape | Liquidi e Dispositivi | LIQUIDO"/>
+<meta property="og:description" content="Catalogo completo di liquidi vape e dispositivi vape premium. Scopri la nostra selezione di e-liquid e mod vape a Monterotondo, Roma."/>
+<meta property="og:url" content="https://liquido.vapeshop/public/products.html"/>
+<meta property="og:site_name" content="LIQUIDO Vape Shop"/>
+<meta property="og:locale" content="it_IT"/>
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="Catalogo Prodotti Vape | LIQUIDO"/>
+<meta name="twitter:description" content="Catalogo completo di liquidi vape e dispositivi vape premium a Monterotondo, Roma."/>
+<meta name="geo.region" content="IT-LA"/>
+<meta name="geo.placename" content="Monterotondo"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -89,6 +105,7 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
+<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
 </nav>
 </div>
 <div class="flex items-center gap-6">
