refactor: Update brand filtering UI and improve brand card styling for better visibility and interaction

--- a/public/index.html
+++ b/public/index.html
@@ -210,9 +210,9 @@
 </div>
 </div>
 </section>
-<section class="py-20 border-y border-white/5 dark:border-white/5 border-black/10 bg-charcoal dark:bg-charcoal bg-surface-light">
+<section class="py-20 border-y border-white/5 dark:border-white/5 border-black/10 bg-gray-100 dark:bg-charcoal bg-surface-light">
 <div class="max-w-[1440px] mx-auto px-6 lg:px-20">
-<p class="text-center text-white/30 dark:text-white/30 text-background-dark/30 uppercase tracking-[0.4em] text-[10px] font-black mb-12">Rivenditore Autorizzato Per</p>
+<p class="text-center text-gray-600 dark:text-white/30 uppercase tracking-[0.4em] text-[10px] font-black mb-12">Rivenditore Autorizzato Per</p>
 <div id="brands-carousel-container" class="opacity-50 min-h-[120px]">
 <!-- Brands carousel will be loaded dynamically from Firebase -->
 </div>
