--- a/public/brands.html
+++ b/public/brands.html
@@ -146,15 +146,16 @@
                         class="w-full pl-12 pr-4 py-4 bg-white/5 dark:bg-white/5 bg-gray-100 border-none focus:ring-1 focus:ring-primary/50 text-background-dark dark:text-white placeholder:text-gray-400 dark:placeholder:text-white/20 text-sm tracking-wide"
                         placeholder="Search brands..." type="text" />
                 </div>
-                <div class="flex flex-wrap items-center justify-center gap-2">
+                <div class="flex flex-wrap items-center justify-center gap-2" id="section-filters">
                     <button
-                        class="px-6 py-2.5 bg-primary text-black text-[11px] font-bold uppercase tracking-widest">All</button>
+                        data-section-id="all"
+                        class="section-filter-btn px-6 py-2.5 bg-primary text-black text-[11px] font-bold uppercase tracking-widest transition-all duration-200">All</button>
                     <button
-                        class="px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-colors text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">Hardware</button>
+                        data-section-id="cat_dispositivi"
+                        class="section-filter-btn px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-all duration-200 text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">Hardware</button>
                     <button
-                        class="px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-colors text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">E-liquids</button>
-                    <button
-                        class="px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-colors text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">Accessories</button>
+                        data-section-id="cat_liquidi"
+                        class="section-filter-btn px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-all duration-200 text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">E-liquids</button>
                 </div>
             </div>
         </section>
