--- a/admin/products/index.html
+++ b/admin/products/index.html
@@ -134,23 +134,22 @@
 </div>
 </div>
 <!-- Chips / Filters -->
-<div class="lg:col-span-6 flex flex-wrap gap-2 items-center justify-end">
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
+<div class="lg:col-span-6 flex flex-wrap gap-2 items-center justify-end relative" id="filters-container">
+<div class="relative">
+<div class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all cursor-pointer" id="brand-filter-dropdown">
 <span class="text-sm font-medium">All Brands</span>
 <span class="material-symbols-outlined text-sm">expand_more</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-primary/20 text-primary border border-primary/30">
-<span class="text-sm font-bold">Vaporesso</span>
-<span class="material-symbols-outlined text-sm">close</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
-<span class="text-sm font-medium">SMOK</span>
-<span class="material-symbols-outlined text-sm">expand_more</span>
-</button>
-<button class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all">
+</div>
+</div>
+<div class="relative">
+<div class="flex items-center gap-2 h-10 px-4 rounded-xl bg-border-dark text-white border border-transparent hover:border-primary/50 transition-all cursor-pointer" id="category-filter-dropdown">
 <span class="text-sm font-medium">Category</span>
 <span class="material-symbols-outlined text-sm">filter_list</span>
-</button>
+</div>
+</div>
+<div id="active-filters" class="flex flex-wrap gap-2">
+<!-- Active filter chips will appear here -->
+</div>
 </div>
 </div>
 </section>
